build/log/idf_py_stderr_output_388136
In file included from /home/vicenterey/esp/projects_tf/model/person_detection/main/main_functions.cc:18:
/home/vicenterey/esp/idf/esp-idf/components/driver/deprecated/driver/mcpwm.h:15:2: warning: #warning "legacy MCPWM driver is deprecated, please migrate to the new driver (include driver/mcpwm_prelude.h)" [-Wcpp]
   15 | #warning "legacy MCPWM driver is deprecated, please migrate to the new driver (include driver/mcpwm_prelude.h)"
      |  ^~~~~~~
In file included from /home/vicenterey/esp/projects_tf/model/person_detection/components/espressif__esp-tflite-micro/tensorflow/lite/micro/tflite_bridge/flatbuffer_conversions_bridge.h:19,
                 from /home/vicenterey/esp/projects_tf/model/person_detection/components/espressif__esp-tflite-micro/tensorflow/lite/micro/micro_allocator.h:26,
                 from /home/vicenterey/esp/projects_tf/model/person_detection/components/espressif__esp-tflite-micro/tensorflow/lite/micro/micro_interpreter.h:26,
                 from /home/vicenterey/esp/projects_tf/model/person_detection/main/main_functions.cc:6:
/home/vicenterey/esp/projects_tf/model/person_detection/components/espressif__esp-tflite-micro/tensorflow/lite/core/api/flatbuffer_conversions.h: In member function 'T* tflite::BuiltinDataAllocator::AllocatePOD()':
/home/vicenterey/esp/projects_tf/model/person_detection/components/espressif__esp-tflite-micro/tensorflow/lite/core/api/flatbuffer_conversions.h:46:24: warning: 'template<class _Tp> struct std::is_pod' is deprecated: use 'is_standard_layout && is_trivial' instead [-Wdeprecated-declarations]
   46 |     static_assert(std::is_pod<T>::value, "Builtin data structure must be POD.");
      |                        ^~~~~~
In file included from /home/vicenterey/esp/idf-tools/tools/xtensa-esp-elf/esp-13.2.0_20240305/xtensa-esp-elf/xtensa-esp-elf/include/c++/13.2.0/bits/stl_pair.h:60,
                 from /home/vicenterey/esp/idf-tools/tools/xtensa-esp-elf/esp-13.2.0_20240305/xtensa-esp-elf/xtensa-esp-elf/include/c++/13.2.0/utility:69,
                 from /home/vicenterey/esp/projects_tf/model/person_detection/components/espressif__esp-tflite-micro/tensorflow/lite/core/c/common.h:1463,
                 from /home/vicenterey/esp/projects_tf/model/person_detection/components/espressif__esp-tflite-micro/tensorflow/lite/c/common.h:31,
                 from /home/vicenterey/esp/projects_tf/model/person_detection/main/detection_responder.h:22,
                 from /home/vicenterey/esp/projects_tf/model/person_detection/main/main_functions.cc:2:
/home/vicenterey/esp/idf-tools/tools/xtensa-esp-elf/esp-13.2.0_20240305/xtensa-esp-elf/xtensa-esp-elf/include/c++/13.2.0/type_traits:819:5: note: declared here
  819 |     is_pod
      |     ^~~~~~
/home/vicenterey/esp/projects_tf/model/person_detection/main/main_functions.cc: In function 'void init_gpio()':
/home/vicenterey/esp/projects_tf/model/person_detection/main/main_functions.cc:22:22: error: 'GPIO_NUM_4' was not declared in this scope
   22 | #define LED_GPIO_PIN GPIO_NUM_4  // Ajusta esto según tu configuración de hardware
      |                      ^~~~~~~~~~
/home/vicenterey/esp/projects_tf/model/person_detection/main/main_functions.cc:36:20: note: in expansion of macro 'LED_GPIO_PIN'
   36 |     gpio_reset_pin(LED_GPIO_PIN);
      |                    ^~~~~~~~~~~~
/home/vicenterey/esp/projects_tf/model/person_detection/main/main_functions.cc:36:5: error: 'gpio_reset_pin' was not declared in this scope
   36 |     gpio_reset_pin(LED_GPIO_PIN);
      |     ^~~~~~~~~~~~~~
/home/vicenterey/esp/projects_tf/model/person_detection/main/main_functions.cc:37:38: error: 'GPIO_MODE_OUTPUT' was not declared in this scope
   37 |     gpio_set_direction(LED_GPIO_PIN, GPIO_MODE_OUTPUT);
      |                                      ^~~~~~~~~~~~~~~~
/home/vicenterey/esp/projects_tf/model/person_detection/main/main_functions.cc:37:5: error: 'gpio_set_direction' was not declared in this scope
   37 |     gpio_set_direction(LED_GPIO_PIN, GPIO_MODE_OUTPUT);
      |     ^~~~~~~~~~~~~~~~~~
make[3]: *** [esp-idf/main/CMakeFiles/__idf_main.dir/build.make:118: esp-idf/main/CMakeFiles/__idf_main.dir/main_functions.cc.obj] Error 1
make[2]: *** [CMakeFiles/Makefile2:5675: esp-idf/main/CMakeFiles/__idf_main.dir/all] Error 2
make[1]: *** [CMakeFiles/Makefile2:2437: CMakeFiles/flash.dir/rule] Error 2
make: *** [Makefile:299: flash] Error 2
